# noise-reduction

./: .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
api/: __init__.py  routes.py
models/: DTLN_vivos_best.h5
services/: __init__.py  dtln_model.py  noise_reduction.py
