[project]
name = "noise-reduction-service"
version = "1.0.0"
description = "REST API service for audio noise reduction using DTLN model"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "tensorflow>=2.13.0",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "wavinfo>=3.0.0",
    "werkzeug>=2.3.0",
]

[project.optional-dependencies]
prod = [
    "gunicorn>=21.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
